<resources>
    <string name="app_name">Baby Care</string>
    <string name="next">Next</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="setting">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="intro_sharing">In emergency you can sharing your child location with people</string>
    <string name="see_your_child">See your child</string>
    <string name="monitoring_your_nchild">MONITORING YOUR \nCHILD</string>
    <string name="child_update_string">See regular updates of your child</string>
    <string name="emergency_message">In emergency mode, a text message is send to your alert contacts that includes Child current location.\n\nNote: Old message is Override</string>
    <string name="emergency_alert">Emergency Alert</string>
    <string name="title_activity_about">About</string>

    <string name="large_text">
        ABSTRACT\n\n
        Now a day’s both parent are working outside for their respective job, so because of this
        no one is with their child who can keep observation like whether child is coming safely
        from school or not, whether child is happy at school atmosphere or not etc. The
        proposed system includes a child module which have a gazette with GPS and parent
        module which includes mobile phone (which supports internet connectivity) for getting
        the information about the missed child on periodical basis. Addition to the proposed
        system is that parents don’t have to continuously monitor the location of child, if child is
        going outside of define area then alert message will be given to parents. Child module
        have one panic switch, with the help of which child can alert parents These proposed
        tracking devices can be worn as wrist watches, anklets or in identity-cards. The child
        module is a hardware based using Arduino, GPS and GSM.\n\n
        Even though if the child is not aware that if he/she is in danger the app will notify the
        parents if the child goes out of a certain defined region outside of his school and home.
        \nIn this way the child can be located if he/she goes missing.
        \n\n
        INTRODUCTION\n\n
        Now a day’s both parents of a child are working. It is not possible for them to keep an
        eye on the child every time. But the parents must have to ensure that the child is fine.
        Usually a small child of 7 or 8 year old can be present in certain defined region. The
        child can be present around his house, or on the way to his school, nearby neighbors’
        home, playground and or park near to his house. A kid of age 15-16 years can go to
        his/her friends’ home, tutorial classes, and nearby areas for shopping and other
        activities.\n\n

        There are many cases when children go missing or are kidnapped. There are many
        such incidences when it becomes a problem for the parents and the local police to track
        a child. They face a lot of difficulty during the search process because it is very difficult
        to find evidences of where the child can be.

        \n\nThe solution demands for a system or a technique with help of which it becomes easy to
        locate the position of an individual. The project is about a software-hardware embedded
        system where a device is used to identify the location (geocoordinates) and software
        application is used to control and monitor the coordinated being send by the device. The
        project is consist of two parts the parent module and the child module. The parent
        module is consist of an android app to plot the child’s position sent by the child module
.
        \n\nThe child module uses Arduino mini, a Global Positioning System (GPS) and a Global
        System for mobile communication (GSM) to track the child’s location. The GPS will
        continuously send the location of the child to the server in the regular interval of time.

        \n\nThen the GSM will allow the Arduino to connect to the internet and send the location of
        the child in the form of a SMS.
        \n\n Thankyou!\n\n

    </string>
    <string name="get_started">Get started</string>
    <string name="Welcome_Message">Feel safety by monitoring your child location with family and friends</string>
    <string name="welcome_to_baby_care">Welcome to baby care</string>
    <string name="change_later">You can change this later</string>
    <string name="my_child_need_your_help">My child need your help!</string>
    <string name="text_message">Text Message:</string>
    <string name="set_emergency_message">Set emergency message</string>
    <string name="ten_digit_mobile_number">Insert ten digit Mobile number</string>
    <string name="set_alert_contact">Set Alert contact</string>
    <string name="emergency_mode">Emergency mode, provides an option to quick message a selected number.\n\nNote: Old number is Override</string>
    <string name="pick_emergency_number">Pick emergency number</string>
    <string name="title_activity_maps">Map</string>
    <string name="feedback">Feedback</string>
    <string name="send">send</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>


    //map menu item
    <string name="map_type_none">None</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="emergency_settings">Emergency settings</string>
    <string name="places_pick">Pick Places</string>
    <string name="emergency_nalert">Emergency Alert</string>
    <string name="location">Location</string>
    <string name="notificationcap">Notifications</string>
    <string name="ring_and_volume">Ring and Volume</string>
    <string name="data_usage">Data Usage</string>
    <string name="about_phone">About phone</string>
    <string name="wifi">WIFI</string>
    <string name="pick_places">Pick Places</string>
    <string name="set_up_places">Set up places</string>
    <string name="choose_location_that_define_your_boundary_base_on_selected_location_a_close_boundary_is_ready">Choose location that define your Boundary. Base on selected location a close boundary is ready\n\nNote: Old places are Override</string>
    <string name="pick_up_to_6_places">PICK UP TO 6 PLACES</string>
    <string name="you_can_change_this_later">You can change this later</string>
    <string name="email">Email</string>
    <string name="connect_to_server">Connect to server</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="forgot_your_passsword">Forgot your passsword</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="app_logo">App logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_login_me">Already registered. Login Me!</string>
    <string name="register">Register</string>
    <string name="message_subject">Message subject</string>
    <string name="update">Update</string>
    <string name="baby_care">Baby Care</string>

    <string name="title_activity_start_fullscreen">StartFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_maint">MaintActivity</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_seetings_menu">SeetingsMenu</string>
    <string name="title_activity_settings_menu">SettingsMenu</string>
    <string name="set_alerts_messages">Set Alerts messages</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="start">Start</string>
    <string name="no_record_found">No record found</string>
    <string name="username">BabyCare</string>
    <string name="userEmail">babycare@gmail.com</string>
    <string name="number">Number</string>
    <string name="pick_contact">Pick Contact</string>
</resources>
