<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Registration"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
        <!--<item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />-->
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_mood_black_24dp"
            android:title="@string/about" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_widgets_black_24dp"
                android:title="@string/feedback" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />


            <!--<item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/exit" />-->
        </menu>
    </item>

</menu>
