<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.careyoutbaby.swetarabi.babycare.SignupActivity">

    <TextView
        android:text="@string/create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textColor="@color/appColor"
        android:fontFamily="monospace"
        android:textSize="30sp"
        android:id="@+id/textView17"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/app_icons"
        android:layout_marginTop="20dp"
        android:id="@+id/imageView10"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView10"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/textInputLayout">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/appColor"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="22dp"
            android:layout_below="@+id/imageView10"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textInputLayout"
        android:layout_alignParentStart="true"
        android:id="@+id/textInputLayout1">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:textColor="@color/appColor"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="22dp"
            android:layout_below="@+id/imageView10"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp" />
    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/textInputLayout1"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/forgot_your_passsword"
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/register"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appColor"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:layout_below="@+id/progressBar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <Button
        android:text="@string/already_registered_login_me"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_new_account"
        android:layout_below="@+id/btn_reset_password"
        android:layout_alignParentStart="true" />

</RelativeLayout>
