<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_emergency_alert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.careyoutbaby.swetarabi.babycare.EmergencyAlertActivity">

    <TextView
        android:text="@string/set_emergency_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/textView8"
        android:textColor="@color/appColor"
        android:fontFamily="sans-serif-medium"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/emergency_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/emergency_message"
        android:fontFamily="sans-serif-light"
        android:textSize="15sp"
        android:textColor="@color/black"/>

    <Button
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button"
        android:background="@color/appColor"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:onClick="next"/>

    <TextView
        android:text="@string/change_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:id="@+id/textView11"
        android:textColor="@color/lightblack"
        android:fontFamily="sans-serif-light"
        android:textSize="10sp"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/textInputLayout1"
        android:layout_below="@+id/emergency_message"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/text_message"
            android:ems="10"
            android:layout_below="@+id/textView10"
            android:layout_alignParentStart="true"
            android:id="@+id/message"
            android:fontFamily="sans-serif-light"/>
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
