<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.careyoutbaby.swetarabi.babycare.Feedback">



    <TextView
        android:text="@string/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feedback_title"
        android:fontFamily="monospace"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/appColor"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/app_icons"
        android:layout_marginTop="68dp"
        android:id="@+id/applogo"
        android:layout_below="@+id/feedback_title"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/textInputLayout"
        android:layout_below="@+id/applogo"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/feedbaceSubject"
            android:hint="@string/subject"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/textInputLayout1"
        android:layout_below="@+id/textInputLayout"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/feedback_massage"
            android:hint="@string/message"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:background="@color/appColor"
        android:elevation="1sp"
        android:textColor="@color/white"
        android:onClick="sendFeedback"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp" />
</RelativeLayout>
