<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_intro2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.careyoutbaby.swetarabi.babycare.Intro2Activity">

    <TextView
        android:text="@string/see_your_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/into_head"
        android:textSize="30sp"
        android:fontFamily="sans-serif-medium"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:textColor="@color/appColor"/>

    <TextView
        android:text="@string/update"
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/into_head"
        android:layout_alignStart="@+id/into_head"
        android:layout_marginTop="18dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/black"
        android:onClick="temp"/>

    <TextView
        android:text="@string/child_update_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textView6"
        android:layout_below="@+id/message"
        android:layout_alignStart="@+id/message"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logox_whit2xy"
        android:id="@+id/imageView2"
        android:layout_above="@+id/start"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp" />

    <Button
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appColor"
        android:id="@+id/start"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="next"
        android:elevation="1sp"
        tools:targetApi="lollipop" />

</RelativeLayout>
